Uma porrada de update que eu não sei nem coimo descrever