@@ -1,8 +1,8 @@
 package com.schoolmanager.school_manager.config;
 
 import com.schoolmanager.school_manager.filter.JWTTokenGeneratorFilter;
+import com.schoolmanager.school_manager.filter.JWTTokenValidatorFilter;
 import com.schoolmanager.school_manager.filter.RequestValidationBeforeFilter;
-import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -12,12 +12,9 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 
-import com.schoolmanager.school_manager.filter.JWTTokenValidatorFilter;
-
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 public class ProjectSecurityConfig {
@@ -27,29 +24,25 @@ public class ProjectSecurityConfig {
 
         http.csrf().disable()
                 .authorizeHttpRequests()
-
-                .requestMatchers("/swagger-ui/**", "/swagger-ui.html**", "/swagger-resources/**", "/v2/api-docs", "/webjars/**").permitAll()
+                .requestMatchers(SwaggerWhiteListSecurity.AUTH_WHITE_LIST).permitAll()
                 .requestMatchers("/h2-console/**").permitAll()
                 .requestMatchers("/api/authors/**").permitAll()
                 .requestMatchers("/teste").permitAll()
                 .requestMatchers("/register").authenticated()
-                    .requestMatchers("/allusers").authenticated()
-                    .requestMatchers("/user").authenticated()
+                .requestMatchers("/allusers").authenticated()
+                .requestMatchers("/user").authenticated()
                 .and().formLogin()
                 .and().httpBasic();
         http.sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS).and()
-                .cors().configurationSource(new CorsConfigurationSource() {
-                    @Override
-                    public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-                        CorsConfiguration config = new CorsConfiguration();
-                        config.setAllowedOrigins(Collections.singletonList("http://localhost:4200"));
-                        config.setAllowedMethods(Collections.singletonList("*"));
-                        config.setAllowCredentials(true);
-                        config.setAllowedHeaders(Collections.singletonList("*"));
-                        config.setExposedHeaders(Arrays.asList("Authorization"));
-                        config.setMaxAge(3600L);
-                        return config;
-                    }
+                .cors().configurationSource(request -> {
+                    CorsConfiguration config = new CorsConfiguration();
+                    config.setAllowedOrigins(Collections.singletonList("http://localhost:4200"));
+                    config.setAllowedMethods(Collections.singletonList("*"));
+                    config.setAllowCredentials(true);
+                    config.setAllowedHeaders(Collections.singletonList("*"));
+                    config.setExposedHeaders(List.of("Authorization"));
+                    config.setMaxAge(3600L);
+                    return config;
                 }).and()
                 .addFilterBefore(new RequestValidationBeforeFilter(), BasicAuthenticationFilter.class)
                 .addFilterAfter(new JWTTokenGeneratorFilter(), BasicAuthenticationFilter.class)
